frontend/test/should_fail/index_exec_edge_fromIndexFromTo_return_value_mismatch.grg
#using "index_exec_model.gm"

sequence s
{
	{ i:set<Node>=edgesFromIndex(bari) }
}
